pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference26.pkl
import "pkl:ref"

myRef: ref.Reference<ref.Domain, String?>
